<resources>
    <string name="app_name">GYECommerce</string>

    <string name="BotonHacerPedido">Hacer pedido</string>
    <string name="BotonVerPedido">Ver estado del pedido</string>

    <string name="BotonContinuar">Continuar</string>
    <string name="BotonCancelarPedido">Cancelar pedido</string>

    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Celular">Número de teléfono</string>
    <string name="CheckWsp">Tienes whatsapp?</string>
    <string name="BotonPedir">Pedir</string>

    <string name="BotonBuscar">Buscar</string>
    <string name="BotonAtras">Atras</string>
    <string name="title_activity_listadocompra">Listadocompra</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="TodoProducto">Todos los productos</string>
    <string name="Confiteria">Productos de confiteria</string>
    <string name="Enlatados">Productos enlatados</string>
    <string name="Frutas">Frutas y verduras</string>
    <string name="Carnes">Carnes, pollos y mariscos</string>
    <string name="Cereales">Arroz, cereal y granos</string>
    <string name="Lacteos">Productos lácteos</string>
    <string name="Suplementos">Productos suplementarios</string>
    <string name="Otros">Otros productos</string>


    <string name="PrecioTotal">Total a pagar:</string>
    <string name="menu_confiteria">Dulces y chocolates</string>
    <string name="menu_conservas">Enlatados y conservas</string>
    <string name="menu_frutas">Frutas y verduras</string>
    <string name="menu_carnes">Carnes y mariscos</string>
    <string name="menu_cereales">Cereales, galletas y arroz</string>
    <string name="menu_lacteos">Lácteos y derivados</string>
    <string name="menu_suplementos">Suplementos médicos</string>
    <string name="menu_otros">Otros productos</string>
    <string name="menu_contáctanos">Contáctanos</string>
    <string name="menu_trabaja">Trabaja con nosotros</string>


    <string name="TuOrden">Tu orden:</string>
    <string name="btnContinuar">Continuar</string>
    <string name="btnAtras">Cancelar</string>

    <string name="Titulo">Tienda Online</string>
    <string name="Subtitulo">GYE-Commerce</string>

    <string name="Txt_compraMinima">Lo sentimos mucho! pero para poder ir a dejarte a casa tus compras, debes de tener un pedido mínimo de: </string>
    <string name="Txt_compraMinima_2">Si gustas podemos agregar el costo del transporte a tus compras. Tiene un costo de: </string>

    <string name="Btn_volver">volver a la lista de compras</string>
    <string name="Btn_transporte">Añadir el transporte</string>
    <string name="Btn_cancelar">cancelar pedido</string>

    <string name="Txt_contactanos">Interesado en algún producto en particular? Escríbenos para poder ayudarte:</string>

    <string name="Txt_trabajaconnosotros">Quieres poner tu producto en nuestra plataforma? Escríbenos. Seguro te podemos ayudar:</string>


</resources>